--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 
-body{
-  font-family:  "Josefin Sans";
+body {
+  font-family: "Josefin Sans";
   font-optical-sizing: auto;
   font-weight: 100;
   font-style: normal;
+}
+
+.nav-link.active {
+  color: #0d6efd !important;
+  font-weight: bold;
 }
